--- a/01-Papilio/大白紋鳳蝶(台灣白紋鳳蝶).html
+++ b/01-Papilio/大白紋鳳蝶(台灣白紋鳳蝶).html
@@ -242,29 +242,14 @@
                 <p class="ScientificName">(Papilio nephelus chaonulus)</p>
                 <h4 class="subTitle">幼生期</h4>
                 <p>大白紋鳳蝶(台灣白紋鳳蝶)的卵呈乳白色圓球狀。
-                    一~四齡為鳥糞狀，五(終)齡幼蟲轉為綠色。
-                    遇到干擾或是危險時，會伸出XXX色叉狀臭角，噴發出刺激液體驅敵。
+                    一~四齡為鳥糞狀，五(終)齡幼蟲轉為綠色，體色有些差異。
                     蛹為帶(縊)蛹，有綠色和褐色兩型之外，也有綠褐混合型。以蛹越冬。
                 </p>
                 <h4 class="subTitle">成蟲</h4>
                 <p>大白紋鳳蝶(台灣白紋鳳蝶)展翅約90~105mm，有一對黑色尾突。
-
-                    中大型鳳蝶。軀體黑褐色，胸部側面有白色斑點;腹部側面有兩縱列白色斑點，腹面有一縱列白色斑點。後翅M3脈端有一葉狀尾突。翅背面底色黑褐色;後翅有一黃白色大斑塊。翅腹面於前翅有灰白色線條，後翅除了黃白色斑塊以外，沿外緣有淺橙黃色弦月紋。雌蝶前翅腹面常有一條白色斜帶。
-
-                    翅膀表面黑色，前翅腹面具4-5枚緊鄰的白色長斑， 外觀近似白紋鳳蝶但本種白斑較大，腹面後翅緣為橙黃色斑紋而非白紋鳳蝶的橙紅色斑；雌蝶翅膀顏色較淡，橙色弦月形斑較發達。
-
-                    大白紋鳳蝶在後翅背面則具有四枚大小不一的白色斑塊，腹面除了那四枚白色斑塊外，還有三枚呈白或黃色較小的斑紋。後翅腹面外緣的弦月紋為黃色。
-
-                    雌，前翅端腹面較淡，後角有3枚白斑，雄蝶僅1-2枚白斑。
-                    雌蝶後翅面的白斑為5枚
-
-                    喜訪花，雄蝶會到溼地吸水。以蛹態度冬。
-                    成蝶喜歡訪花，雄蝶常常群聚到溼地吸水。
-
-
-                    <br>(說明：為了逃避天敵捕食，擬態成其他有毒蝶種的擬態方式稱為<a
-                        href="https://zh.wikipedia.org/zh-tw/%E8%B4%9D%E6%B0%8F%E6%8B%9F%E6%80%81"
-                        target="_blank">貝氏擬態</a>。)
+                    雌、雄蝶後翅表有4大1小共5個白斑，腹面外緣的弦月紋為橙黃色。
+                    雌蝶前翅端腹面較淡，雌蝶後翅腹面有3大2小共5個白斑，雄蝶後翅腹有2大2小大共4個白斑。
+                    成蝶喜歡訪花，雄蝶會群聚到溼地吸水。以蛹態度冬。
                 </p>
                 <h4 class="subTitle">食草</h4>
                 <span>幼蟲以芸香科植物為食，如：飛龍掌血、賊仔樹和食茱萸(刺蔥)......等。</span>
@@ -358,7 +343,7 @@
                 <div class="card">
                     <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)正面</p>
+                <p class="card-text">雄蝶(♂)正面-後翅表的有4大1小的白斑</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
