--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link href="css/SJS'sButterflyFriend.css" rel="stylesheet">
     <link rel="stylesheet" href="css/scrolltotop_arrow_style.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>向老師的蝴蝶朋友</title>
   </head>  
   <body>
