--- a/01-Papilio/花鳳蝶(無尾鳳蝶).html
+++ b/01-Papilio/花鳳蝶(無尾鳳蝶).html
@@ -254,7 +254,7 @@
                 <h4 class="subTitle">成蟲</h4>
                 <p>花鳳蝶(無尾鳳蝶)展翅約70~80mm，無尾突。
                     雌雄斑紋差異不大，腹面下翅前緣有一個眼狀斑。
-                    雄蝶下翅表面肛角有一個上緣藍黑色的大紅褐色斑紋，雌蝶的藍黑色斑紋較大且明顯(藍色斑比較寬粗)。
+                    雄蝶下翅表面肛角有一個上緣藍黑色的大紅褐色斑紋，雌蝶除了腹面翅色偏黃之外，肛角處藍黑色斑紋較大且明顯(藍色斑比較寬粗)。
                     成蝶飛翔速度很快，喜訪花。
                 </p>
                 <h4 class="subTitle">食草</h4>
