新增黃裳鳳蝶
新增黃裳鳳蝶網頁、圖片檔

--- a/01-Papilio/黃裳鳳蝶.html
+++ b/01-Papilio/黃裳鳳蝶.html
@@ -241,22 +241,19 @@
                 <p class="ScientificName">(Troides aeacus formosanus)</p>
                 <h4 class="subTitle">幼生期</h4>
                 <p>黃裳鳳蝶的卵白色圓球形，直徑約2.5mm，表面覆蓋橙黃色的膠質。
-
-                    幼蟲體型大，體色為黃褐色，搭配黑條紋，肉棘末端橙黃色。終齡幼蟲腹側白色。
-
-                    幼蟲外形有肉棘狀突起，臭角為橙黃色。在化蛹之前體長更可長達8公分，蛹為縊蛹，黑褐色的絲帶，外觀像捲曲的枯葉具保護作用。
-                    像是捲曲的枯葉，而腹面褐色的細紋，如同葉片的葉脈。蛹期約3週，以蛹越冬。
-
-
-
+                    幼蟲體型大，腹側有一條白色斜紋，在化蛹之前體長可長達8公分。體色為黃褐色，幼蟲全身長滿肉棘，肉棘末端為橙黃色，外型像一隻海參。終齡幼蟲腹側白色。
+                    遇到危險或騷擾時會從伸出黃橙色的臭角。
+                    蛹為縊蛹，絲帶為黑褐色，外觀像捲曲的枯葉；腹面有褐色的細紋，像是葉脈。蛹期約3週，冬季以蛹越冬。
                 </p>
                 <h4 class="subTitle">成蟲</h4>
-                <p>黃裳鳳蝶，展翅約110~130mm，為台灣特有亞種，展翅約110~130mm，是台灣本島蝴蝶種類中體型最大者。
-                    後翅有耀眼的鮮黃色。雌蝶黑色斑紋較為發達。雌蝶體型較大，後翅有數個「A」字紋；雄蝶則有大片金黃色斑紋
-                    喜歡訪花吸蜜。
+                <p>黃裳鳳蝶屬於台灣特有亞種，展翅約110~130mm，是台灣本島蝴蝶種類中體型最大者。
+                    雄蝶後翅不論是正面、腹面都有大片金黃色斑紋，翅膀夾層中有發香鱗，用來吸引母蝶。
+                    雌蝶黑色斑紋較為發達，而且體型較大，後翅腹面、正面都有數個「A」字紋。喜歡訪花吸蜜。
                 </p>
                 <h4 class="subTitle">食草</h4>
-                <span>幼蟲以馬兜鈴科的港口馬兜鈴、臺灣(異葉)馬兜鈴、瓜葉馬兜鈴、蜂窩馬兜鈴......等馬兜鈴科植物為食草。</span>
+                <span>幼蟲以馬兜鈴科的港口馬兜鈴、臺灣(異葉)馬兜鈴、瓜葉馬兜鈴、蜂窩馬兜鈴......等馬兜鈴科植物為食草。                    
+                </span><br><br>
+                <span>《補充》<br>取食馬兜鈴科的幼蟲，體內積聚了不少馬兜鈴酸。而馬兜鈴酸可能會讓捕食的鳥類、爬蟲類造成腎功能的損壞。因而這些天敵便會避免捕食此類曲食馬兜鈴科植物的蝴蝶幼蟲或是成蟲。</span>
             </div>
         </div>
         <hr><br>
@@ -270,76 +267,77 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-精斑.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">精斑</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-1齡.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-1齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">一齡幼蟲</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-4齡.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-2齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">四齡幼蟲</p>
+                <p class="card-text">二齡幼蟲側面</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-2齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">二齡幼蟲正面</p>
             </div>
         </div>
         <!-- 第2列 -->
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-終齡.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-3齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">三齡幼蟲側面</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-3齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">三齡幼蟲正面</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-4齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">四齡幼蟲</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-終齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">終齡幼蟲</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-4齡幼蟲臭角.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">四齡幼蟲伸出臭角</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-終齡幼蟲臭角.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">終齡幼蟲伸出臭角</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-綠色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">綠色蛹正面</p>
             </div>
         </div>
         <!-- 第3列 -->
         <div class="row g-2">
+            <div class="col-md-3">                
+                <div class="card">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-橘色臭角.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                    <p class="card-text">終齡幼蟲伸出橘黃色臭角</p>
+            </div>
+            
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-綠色蛹側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-前蛹.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">綠色蛹側面</p>
+                <p class="card-text">前蛹</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-褐色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-蛹側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">褐色蛹正面</p>
+                <p class="card-text">蛹側面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-褐色蛹側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">褐色蛹側面</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">雄蝶(♂)正面</p>
-            </div>
+                <p class="card-text">蛹正面</p>
+            </div>            
         </div>
         <!-- 第4列 -->
         <div class="row g-2">
@@ -351,21 +349,21 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-無尾型雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶的發香鱗-腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">無尾型雌蝶(♀)正面</p>
+                <p class="card-text">雄蝶腹面(♂)長條形的發香鱗</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-無尾型雌蝶腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶的發香鱗-正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">無尾型雌蝶(♀)腹面</p>
+                <p class="card-text">雄蝶正面(♂)長條形的發香鱗</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-有尾型雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">有尾型雌蝶(♀)正面</p>
+                <p class="card-text">有雌蝶(♀)腹面</p>
             </div>
         </div>
 
@@ -373,27 +371,27 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-有尾型雌蝶腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">有尾型雌蝶(♀)腹面</p>
+                <p class="card-text">雌蝶(♀)正面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-無尾型雌蝶訪醉蝶花.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶正面後翅的A形紋.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">無尾型雌蝶(♀)訪醉蝶花</p>
+                <p class="card-text">雌蝶(♀)正面後翅的A形紋</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-有尾型雌蝶訪繁星花.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶訪馬纓丹.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">有尾型雌蝶(♀)訪繁星花</p>
+                <p class="card-text">雌蝶(♀)訪馬纓丹</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶訪繁星花.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶訪繁星花.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)訪繁星花</p>
+                <p class="card-text">雌蝶(♀)訪繁星花</p>
             </div>
 
 
