--- a/01-Papilio/黃裳鳳蝶.html
+++ b/01-Papilio/黃裳鳳蝶.html
@@ -241,7 +241,7 @@
                 <p class="ScientificName">(Troides aeacus formosanus)</p>
                 <h4 class="subTitle">幼生期</h4>
                 <p>黃裳鳳蝶的卵白色圓球形，直徑約2.5mm，表面覆蓋橙黃色的膠質。
-                    幼蟲體型大，腹側有一條白色斜紋，在化蛹之前體長可長達8公分。體色為黃褐色，幼蟲全身長滿肉棘，肉棘末端為橙黃色，外型像一隻海參。終齡幼蟲腹側白色。
+                    幼蟲體型大，腹側有一條白色斜紋，在化蛹之前體長可長達8公分。體色為黃褐色，幼蟲全身長滿肉棘，肉棘末端為橙黃色，外型像一隻海參。
                     遇到危險或騷擾時會從伸出黃橙色的臭角。
                     蛹為縊蛹，絲帶為黑褐色，外觀像捲曲的枯葉；腹面有褐色的細紋，像是葉脈。蛹期約3週，冬季以蛹越冬。
                 </p>
